--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   changelog_cli: ^0.5.1
+  flutter_markdown: ^0.7.5
 
 dev_dependencies:
   flutter_test:
@@ -60,7 +61,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/CHANGELOG.md
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
