--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   changelog_cli: ^0.5.1
   flutter_markdown: ^0.7.5
+  version: ^3.0.2
+  package_info_plus: ^8.2.1
 
 dev_dependencies:
   flutter_test:
